GMC: Export the shipping handling time

--- a/src/Smartstore.Modules/Smartstore.Google.MerchantCenter/Localization/resources.de-de.xml
+++ b/src/Smartstore.Modules/Smartstore.Google.MerchantCenter/Localization/resources.de-de.xml
@@ -163,7 +163,7 @@
         <Value>Versanddaten exportieren</Value>
     </LocaleResource>
     <LocaleResource Name="ExportShipping.Hint">
-        <Value>Legt fest, ob Gewicht, Länge, Breite und Höhe eines Produktes exportiert werden sollen.</Value>
+        <Value>Legt fest, ob optionale Versanddaten wie z.B. Gewicht, Länge, Breite und Höhe eines Produktes exportiert werden sollen.</Value>
     </LocaleResource>
     <LocaleResource Name="ExportShippingTime">
         <Value>Lieferzeit exportieren</Value>
